# tickerforge-py

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: early-closes-integration.md  first-working-version.md  smart-ticker-parsing.md  spec-integration.md
scripts/: check_versions.py
tests/: test_b3_calendar_golden.py  test_contract_cycles.py  test_equities.py  test_expiration_rules.py  test_option_parsing.py  test_spec_loading.py  test_ticker_generation.py  test_ticker_parsing.py
tickerforge/: __init__.py  calendars.py  contract_cycle.py  expiration_rules.py  models.py  month_codes.py  schedule.py  spec_loader.py  ticker_generator.py  ticker_parser.py
