[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tickerforge"
version = "0.1.0"
description = "Generate and parse derivatives tickers from tickerforge-spec."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pyyaml",
  "pydantic",
  "exchange_calendars",
  "python-dateutil",
  "tickerforge-spec-data @ git+https://github.com/mesias/tickerforge-spec.git@main#subdirectory=packaging/python",
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["tickerforge*"]

[tool.setuptools.package-data]
tickerforge = ["py.typed"]
