[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tickerforge"
version = "0.1.0"
description = "Generate and parse derivatives tickers from tickerforge-spec."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pyyaml",
  "pydantic",
  "exchange_calendars",
  "python-dateutil",
  "tickerforge-spec-data @ git+https://github.com/mesias/tickerforge-spec.git@main#subdirectory=packaging/python",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pre-commit",
  "black",
  "isort",
  "ruff",
  "mypy",
  "types-PyYAML",
  "types-python-dateutil",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
target-version = ["py310"]
line-length = 88

[tool.isort]
profile = "black"
known_first_party = ["tickerforge"]

[tool.ruff]
target-version = "py310"
src = ["tickerforge"]

[tool.mypy]
python_version = "3.10"
packages = ["tickerforge"]
plugins = ["pydantic.mypy"]
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "exchange_calendars.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tickerforge_spec_data.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.setuptools.packages.find]
include = ["tickerforge*"]

[tool.setuptools.package-data]
tickerforge = ["py.typed"]
