[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tickerforge"
dynamic = ["version"]
description = "Generate and parse derivatives tickers from tickerforge-spec."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pyyaml",
  "pydantic",
  "exchange_calendars",
  "python-dateutil",
  "tickerforge-spec-data @ git+https://github.com/mesias/tickerforge-spec.git@main",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "pre-commit",
  "black",
  "isort",
  "ruff",
  "mypy",
  "pandas",
  "types-PyYAML",
  "types-python-dateutil",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
target-version = ["py310"]
line-length = 88

[tool.isort]
profile = "black"
known_first_party = ["tickerforge"]

[tool.ruff]
target-version = "py310"
src = ["tickerforge"]

[tool.mypy]
python_version = "3.10"
packages = ["tickerforge"]
plugins = ["pydantic.mypy"]
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "exchange_calendars.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tickerforge_spec_data.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
path = "VERSION"
pattern = "^(?P<version>\\S+)"

[tool.hatch.build.targets.wheel]
packages = ["tickerforge"]
